--- a/cai17-on-augmented-spns.tex
+++ b/cai17-on-augmented-spns.tex
@@ -69,10 +69,9 @@ Abstract
 % Sections
 \input{sections/introduction}
 \input{sections/background} 
-%\input{sections/simplifying_msep}
-%\input{sections/equivalence}
-%\input{sections/advantages}
-%\input{sections/conclusion}
+\input{sections/aug_spns}
+\input{sections/advantages}
+\input{sections/conclusion}
 
 % References
 \bibliographystyle{splncs03}
