--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,1 +1,20 @@
 \section{Introduction}
+
+[Background]\\
+Two methods for augmenting SPNs.\\
+Poupart and Pehartz.\\
+Pehartz is better because it fixes the conflicting of indicator variables as LV with the completeness condition.\\
+Also, Pehartz proposes a LV interpretation which allows to see augmented SPNs as BNs.\\
+This resulted in a sound derivation of EM for SPNs.
+
+
+[Problem] \\
+The augmentation was proposed as a theoretical too to establish an work with the LV interpretation in SPNs
+The augmented SPN can grow quadratically in $|S|$ for upper bound.
+
+[New augmentation]
+
+[How new augmentation affects the CIs]
+
+[How new augmentation affects the EM] \\
+Future work
