--- a/cai17-on-augmented-spns.tex
+++ b/cai17-on-augmented-spns.tex
@@ -61,14 +61,22 @@ Department 1, Institute 1, Country 1\\
 
 
 % Abstract
+
 \begin{abstract}
-Abstract
-\keywords{sum product networks, conditional independence, deep learning}
+SPNs
+
+Augmented SPNs
+
+New Work
+
 \end{abstract}
+
+\keywords{sum product networks, conditional independence, deep learning}
+
 
 % Sections
 \input{sections/introduction}
-\input{sections/background} 
+\input{sections/background}
 \input{sections/aug_spns}
 \input{sections/advantages}
 \input{sections/conclusion}
