--- a/sections/advantages.tex
+++ b/sections/advantages.tex
@@ -1,2 +1,14 @@
-\section{Advantages}
+\section{Analysis}
 
+
+{\bf Upgrade Poupart method for encoding LV interpretation.}
+
+[Poon11] said SPNs are mixtures models
+
+Mixture models $\Rightarrow$ LV interpretation of SPNs
+
+Normalized SPNs are equivalent to SPNs
+
+Normalized SPNs + LV introduction $\Rightarrow$ completeness problem
+
+New method fix with Pehartz solution
