--- a/sections/aug_spns.tex
+++ b/sections/aug_spns.tex
@@ -1,1 +1,29 @@
-\section{New Work}
+\section{On Augmentation of SPNs}
+
+Peharz said: \\
+Augmented SPN $\rightarrow$ Poupart BN
+
+I say: \\
+Normalized SPN $\rightarrow$ Peharz BN
+
+Current Poupart:\\
+	SPN $\rightarrow$ Normalized SPN $\rightarrow$ Poupart BN
+
+We know:\\
+	Augumented SPN $=$ Normalized SPN $+$ Twin Nodes
+	
+
+Introduce Twin Nodes in Normalized SPN
+
+Poupart:\\
+	SPN $\rightarrow$ Normalized SPN + Twin Nodes (Augmented SPN)$\rightarrow$ Poupart BN
+	
+Use Peharz method to:\\
+	SPN $\rightarrow$ Augmented SPN $\rightarrow$ Pehartz BN
+	
+\subsection{Twin nodes alternative}
+
+Instead of introducing twin nodes in Normalized SPN we can modify cope definition in normalized SPN.
+
+The method consists in creating a storage for scope in the nodes.
+in the Pehartz algorithm we would add the missing variables to the scope of some nodes.
