--- a/sections/background.tex
+++ b/sections/background.tex
@@ -1,1 +1,45 @@
 \section{Background}
+
+%\subsection{Required Notation}
+
+%network polynomial
+\subsection{Bayesian Networks}
+
+Definition
+
+Example
+
+Figure
+
+Comment about inference. NP hard.
+
+\subsection{Sum-Product Networks}
+
+A Sum-Product network (SPN) $\cal S$ over a set of random variables $X$ is a rooted DAG whose leaves are indicators $I$...
+
+Figure
+
+Example
+
+Comment
+
+
+\subsection{Poupart method}
+
+SPN $\rightarrow$ Normalized SPN $\rightarrow$ Poupart BN
+
+Definition
+
+Algorithm
+
+Comment
+
+\subsection{Peharz}
+
+SPN $\rightarrow$ Augumented SPN $\rightarrow$ Peharz BN
+
+Definition
+
+Algorithm
+
+Comment
