--- a/cai17-on-augmented-spns.tex
+++ b/cai17-on-augmented-spns.tex
@@ -12,6 +12,11 @@
 \usepackage{paralist}
 \usepackage{url}
 \usepackage{amsmath}
+% Algorithm
+\usepackage{algorithm}
+\usepackage[noend]{algpseudocode}
+\algrenewcommand\Return{\State \algorithmicreturn{} }
+\algnewcommand{\LineComment}[1]{\State \(\triangleright\) #1}
 
 %% Emails
 %\urldef{\mailsa}\path|{butz,dossantos,oliveira}@cs.uregina.ca|
