--- a/sections/background.tex
+++ b/sections/background.tex
@@ -42,9 +42,9 @@ For instance, a multinomial distribution over $X_i$ can be represented by $\sum_
 
 \begin{figure}[h]
     \begin{center}
-		\includegraphics[width=0.4\textwidth]{figures/SPN.png}
+		\includegraphics[width=0.45\textwidth]{figures/SPN.png}
 		\caption{Example SPN from over ${\bf X}=\{X_1,X_2,X_3\}$ adapted from \cite{Peharz:2016wl}.}
-		\label{subfig:dag}
+		\label{fig:spn}
     \label{fig:spn}
     \end{center}
 \end{figure}
@@ -110,6 +110,15 @@ SPN $\rightarrow$ Normalized SPN $\rightarrow$ Poupart BN
 Definition
 
 Scope of distribution nodes in norm SPN
+
+\begin{figure}[h]
+    \begin{center}
+		\includegraphics[width=0.45\textwidth]{figures/norm_SPN.png}
+		\caption{Normalized SPN in \ref{fig:spn} into normal form.}
+		\label{fig:norm_spn}
+    \label{fig:spn}
+    \end{center}
+\end{figure}
 
 \begin{algorithm}[!ht]
     \caption{\cite{zhao2015relationship} Build BN Structure.}
