--- a/sections/aug_spns.tex
+++ b/sections/aug_spns.tex
@@ -1,6 +1,12 @@
 \clearpage
 \section{On Augmentation of SPNs}
 
+\cite{peharz2015theoretical} states that the BN representation by \cite{zhao2015relationship} can be recovered from the BN representation of augmented SPNs.
+This tasks consists of constrain the twin-nodes to be equal to the sum-weights.
+By changing the twin wights, all edges between latent variables are removed.
+
+
+
 Peharz said: \\
 Augmented SPN $\rightarrow$ Poupart BN
 
