--- a/sections/background.tex
+++ b/sections/background.tex
@@ -1,5 +1,7 @@
 \section{Background}
 
+We begin by presenting some pertinent notation.
+
 \subsection{Required Notation}
 
 We first define some pertinent notation used in this paper.
@@ -108,6 +110,8 @@ There are two method to convert a SPN to a \emph{Bayesian Network} (BN) \cite{pe
 SPN $\rightarrow$ Normalized SPN $\rightarrow$ Poupart BN
 
 Definition
+
+Comment that we do not explain ADDs because it's immaterial fro our discussion. 
 
 Scope of distribution nodes in norm SPN
 
