--- a/sections/advantages.tex
+++ b/sections/advantages.tex
@@ -1,4 +1,5 @@
 \section{Analysis}
+\label{sec:analysis}
 
 
 {\bf Upgrade Poupart method for encoding LV interpretation.}
@@ -12,3 +13,6 @@ Normalized SPNs are equivalent to SPNs
 Normalized SPNs + LV introduction $\Rightarrow$ completeness problem
 
 New method fix with Pehartz solution
+
+
+This new method allows to a initiative talk apply Poupart to convert a much larger class of BNs to SPn
